--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
       href="https://fonts.googleapis.com/css2?family=Scheherazade+New&display=swap"
       rel="stylesheet"
     />
-    <link rel="stylesheet" href="styles/reset.css" />
+    <link rel="stylesheet" href="reset.css" />
     <link rel="stylesheet" href="styles/base.css" />
   </head>
   <body>
@@ -68,7 +68,7 @@
             <section class="dt-header">
               <div class="target dt-header__container">
                 <nav class="dt-header__inner">
-                  <h1 id="#">Ryohei Ishikawa</h1>
+                  <h1>Ryohei Ishikawa</h1>
                   <div class="dt-header__item">
                     <ul class="dt-header__ul">
                       <li class="dt-header__li">
