--- a/index.html
+++ b/index.html
@@ -62,7 +62,9 @@
           </div>
         </header>
         <main class="main">
-          <img class="main__img" src="images/ishikawa.jpg" alt="" />
+          <div class="main__top">
+            <img class="main__img" src="images/ishikawa.jpg" alt="" />
+          </div>
           <div class="sticky-container">
             <!-- デスクトップ用ヘッダー -->
             <section class="dt-header">
@@ -98,21 +100,23 @@
             </section>
             <!-- 自己紹介 -->
             <section class="profile">
-              <div class="target uppertext1">
-                <span class="span1" id="profile"></span>
-                <div class="en profile__en">PROFILE</div>
-                <div class="ja profile__ja">自己紹介</div>
-              </div>
-              <div class="profile__inner">
-                <img
-                  class="target profile__img"
-                  src="images/ishikawa.jpg"
-                  alt=""
-                />
-                <div class="target profile__texts">
-                  <p>
-                    テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。
-                  </p>
+              <div class="profile__wrapper">
+                <div class="target uppertext1">
+                  <span class="span1" id="profile"></span>
+                  <div class="en profile__en">PROFILE</div>
+                  <div class="ja profile__ja">自己紹介</div>
+                </div>
+                <div class="profile__inner">
+                  <img
+                    class="target profile__img"
+                    src="images/ishikawa.jpg"
+                    alt=""
+                  />
+                  <div class="target profile__texts">
+                    <p>
+                      テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。テキストが入ります。
+                    </p>
+                  </div>
                 </div>
               </div>
             </section>
