--- a/index.html
+++ b/index.html
@@ -174,8 +174,8 @@
                     <textarea name="comment" id="detail" rows="10"></textarea>
                   </div>
                   <div class="contact__btn">
-                    <input type="button" value="内容の確認">
-                    <input type="submit" value="送信する">
+                    <input type="button" value="確認">
+                    <input type="submit" value="送信">
                   </div>
                 </form>
               </div>
